# solo2

components/ndef-app/: Cargo.toml
components/ndef-app/src/: ndef.rs
components/nfc-device/: Cargo.toml
components/nfc-device/src/: iso14443.rs
components/provisioner-app/: Cargo.toml
runners/lpc55/: Cargo.toml
runners/lpc55/board/src/: trussed.rs
runners/lpc55/src/: initializer.rs  lib.rs  main.rs  types.rs
runners/lpc55/src/initializer/: stages.rs
runners/lpc55/src/types/: usb.rs
runners/pc/: Cargo.toml
