[package]
name = "provisioner-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = "0.3"
defmt = "1.0.1"
heapless = "0.8"
heapless-bytes = "0.3"
lpc55-hal = { version = "0.3", features = ["rtic-peripherals"] }
littlefs2 = "0.6"
salty = { version = "0.2", features = ["cose"] }
trussed = "0.1"

[dependencies.nisty]
version = "0.1.0-alpha.5"
features = ["asn1-der", "cose"]

[features]
test-attestation = []
