[package]
name = "runner"
version = "2.964.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Conor Patrick <conor@solokeys.com>"]
edition = "2021"
rust-version = "1.62.0"

[lib]
name = "runner"

[[bin]]
name = "runner"
path = "src/main.rs"

[dependencies]
rtic = "2.0.0"
rtic-monotonics = { version = "2.0.0", features = ["cortex-m-systick"] }
rtic-sync = "1.4.0"
# FIXME: get rid of critical-section-single-core feature once old versions of critical-section are no longer needed.
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
systick-monotonic = "1.0.1"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
delog = "0.1.1"
heapless = "0.9"
interchange = "0.3"
nb = "1"
static_cell = "2.1.1"
usb-device = "0.2.3"
# usbd-hid = { version = "0.4.5", optional = true }
usbd-serial = "0.1.0"

admin-app = { version = "0.1", optional = true }
trussed-staging = { version = "0.3", features = ["hkdf", "fs-info", "manage"] }
trussed-fs-info = "0.2"
trussed-hkdf = "0.3"
trussed-manage = "0.2"
apdu-dispatch = "0.3"
ctaphid-dispatch = "0.3"
ctap-types = "0.1"
fido-authenticator = { version = "0.2", features = ["dispatch"], optional = true }
# oath-authenticator 0.1.0 is incompatible with new trussed/littlefs2 - needs upgrading
oath-authenticator = { version = "0.1", features = ["apdu-dispatch"], optional = true }
piv-authenticator = { git = "https://github.com/trussed-dev/piv-authenticator", features = ["apdu-dispatch"], optional = true, tag = "v0.5.3" }
trussed = "0.1"
trussed-core = "0.1"

# board
board = { path = "board" }

# components
ndef-app = { path = "../../components/ndef-app", optional = true }
# NB: when using this app, need to raise trussed/clients-5
provisioner-app = { path = "../../components/provisioner-app", optional = true }
fm11nc08 = {path = "../../components/fm11nc08"}
nfc-device = {path = "../../components/nfc-device"}
usbd-ccid = "0.3"
usbd-ctaphid = "0.3"


# panic
panic-halt = "1.0.0"
# panic-semihosting = "0.5.6"

# storage
littlefs2 = { version = "0.6", features = ["c-stubs"] }

[features]
# ndef-app is an annoyance on some mobile platforms
default = ["admin-app", "fido-authenticator", "ndef-app"]
# oath-authenticator 0.1.0 is incompatible with new trussed; disabled until upgraded
# oath = ["oath-authenticator"]

# develop = ["no-encrypted-storage", "no-buttons", "no-reset-time-window"]
# develop = ["no-encrypted-storage", "no-reset-time-window"]
# develop = ["no-encrypted-storage", "no-buttons"]
develop = ["no-encrypted-storage"]

develop-piv = ["develop", "piv-authenticator"]
develop-provisioner = ["develop", "provisioner-app"]

# Do not use encryption for the filesystem
no-encrypted-storage = []

# Check for undefined flash and write to determined value (for prince provisioning)
write-undefined-flash = []

# Use to auto-succeed every user presence check
no-buttons = ["board/no-buttons"]

# Allow resetting FIDO authenticator (and possibly others) even after 10s uptime
no-reset-time-window = ["fido-authenticator/disable-reset-time-window"]

# Format filesystem anyway
format-filesystem = []

# TODO: get rid of these (depends on moving "initialize_basic" &friends into `board`
board-lpcxpresso55 = ["board/lpcxpresso55"]
board-okdoe1 = ["board/okdoe1", "usbfs-peripheral"]
board-solo2 = ["board/solo2"]

log-defmt = []

highspeed = []
usbfs-peripheral = []
serial = []
# Reconfigure the NFC chip in any case
reconfigure-nfc = []
no-clock-controller = ["board/no-clock-controller"]
enable-clock-controller-signal-pin = ["board/enable-clock-controller-signal-pin"]
# very-twitchy-mouse = ["usbd-hid"]

# patch dependencies like so to test local changes

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
incremental = false
debug = true

# Speed up crypto packages
[profile.release.package.salty]
opt-level = 2

# TODO: see which if any settings are best for p256-cortex-m4
# [profile.release.package.nisty]
# opt-level = 2

[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "e107ed315a07dc6c992fac39d542e847cc3a1b6c" }
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", tag = "v0.1.0-nitrokey.20" }
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", tag = "v0.6.1-nitrokey.1" }
littlefs2-sys = { git = "https://github.com/trussed-dev/littlefs2-sys.git", tag = "v0.3.1-nitrokey.1" }
# Force both trussed and littlefs2 to use the same littlefs2-core (resolves DynFilesystem version mismatch)
littlefs2-core = { git = "https://github.com/trussed-dev/littlefs2.git", tag = "v0.6.1-nitrokey.1" }
# Extension backends needed by fido-authenticator 0.2 (FsInfoClient, HkdfClient)
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "v0.3.3" }
